@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 6,
+  "count": 6,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-07-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-22T00:00:00Z",
       "count": 4,
